Fixing category link name

--- a/direwolf/app/views/admins/index.html.erb
+++ b/direwolf/app/views/admins/index.html.erb
@@ -69,7 +69,7 @@
     <div class="col-md-4">
       <div class="panel panel-success">
         <div class="panel-heading">
-          <%= link_to 'View All Categories', category_index_path, class: "pull-right" %>
+          <%= link_to 'Edit Categories', category_index_path, class: "pull-right" %>
           <h3 class="panel-title">Categories</h3>
         </div>
         <% if !@categories.empty? %>
