--- a/direwolf/app/views/job_applications/index.html.erb
+++ b/direwolf/app/views/job_applications/index.html.erb
@@ -1,5 +1,5 @@
-<div class="col-md-4">
-  <div class="panel panel-primary">
+<div class="col-md-offset-3 col-md-6">
+  <div class="panel panel-default">
     <div class="panel-heading">
       <h3 class="panel-title">Applications</h3>
     </div>
