--- a/direwolf/app/views/jobs/_form.html.erb
+++ b/direwolf/app/views/jobs/_form.html.erb
@@ -56,9 +56,7 @@
       <!-- Button -->
       <div class="form-group">
         <label class="col-md-4 control-label" for="submit"></label>
-        <div class="col-md-4">
-          <%= f.submit "Save", class: "btn btn-default btn-primary" %>
-        </div>
+        <%= f.submit 'Save', class: 'col-md-offset-2 btn btn-primary' %>
       </div>
 
     </fieldset>
