--- a/direwolf/app/views/employers/_form.html.erb
+++ b/direwolf/app/views/employers/_form.html.erb
@@ -49,9 +49,7 @@
       <!-- Button -->
       <div class="form-group">
         <label class="col-md-4 control-label" for="submit"></label>
-        <div class="col-md-4">
-          <%= f.submit "Submit", class: "btn btn-default btn-primary" %>
-        </div>
+        <%= f.submit 'Save', class: 'col-md-offset-1 btn btn-primary' %>
       </div>
 
     </fieldset>
