--- a/direwolf/app/views/layouts/employer_layout.html.erb
+++ b/direwolf/app/views/layouts/employer_layout.html.erb
@@ -29,8 +29,7 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><strong>Employer: <%= current_user.name %></strong></a>
                 <ul class="dropdown-menu" role="menu">
-                  <li><a href="#">My Profile</a></li>
-                  <li><%= link_to "Google Settings", "https://www.google.com/settings/security", id: "settings" %></li>
+                  <li><%= link_to "Settings", "https://www.google.com/settings/security", id: "settings" %></li>
                   <li><%= link_to "Sign out", signout_path, id: "sign_out" %></li>
                 </ul>
               </li>
