--- a/direwolf/app/views/seekers/index.html.erb
+++ b/direwolf/app/views/seekers/index.html.erb
@@ -5,37 +5,41 @@
     </div>
     
     <div class="panel-body">
-      <%if @seeker%>
-        <form class="form" role="form">
-
+      <form class="form-horizontal" role="form">
           <div class="form-group">
-            <label class="control-label">Email:</label>
-            <p class="form-control-static"><%= @seeker.email %></p>
+            <label class="col-md-4 control-label">Email:</label>
+            <div class="col-md-8">
+              <p class="form-control-static"><%= @seeker.email %></p>
+            </div>
           </div>
 
           <div class="form-group">
-            <label class="control-label">Phone:</label>
-            <p class="form-control-static"><%= @seeker.phone %></p>
+            <label class="col-md-4 control-label">Phone:</label>
+            <div class="col-md-8">
+              <p class="form-control-static"><%= @seeker.phone %></p>
+            </div>
           </div>
 
           <div class="form-group">
-            <label class="control-label">Skills:</label>
-            <p class="form-control-static">
-              <% @seeker.skill_list.each do |skill|%>
-                <span class="label label-success"><%= skill %></span>
-              <%end%>
-            </p>
+            <label class="col-md-4 control-label">Skills:</label>
+            <div class="col-md-8">
+              <p class="form-control-static">
+                <% @seeker.skill_list.each do |skill|%>
+                  <span class="label label-success"><%= skill %></span>
+                <%end%>
+              </p>
+            </div>
           </div>
 
           <div class="form-group">
-            <label class="control-label">Resume:</label>
-            <p class="form-control-static"><%= @seeker.resume %></p>
+            <label class="col-md-4 control-label">Resume:</label>
+            <div class="col-md-8">
+              <p class="form-control-static"><%= @seeker.resume %></p>
+            </div>
           </div>
-
-        </form>
-        <%= link_to "Edit Profile", edit_seeker_path(@seeker.id), class: "col-md-offset-4 col-md-4 btn btn-primary" %>
-      </div>
-      <%end%>
+      </form>
+      <%= link_to "Edit Profile", edit_seeker_path(@seeker.id), class: "col-md-offset-4 btn btn-primary" %>
+    </div>
   </div>
 </div>
 
