--- a/direwolf/app/views/seekers/show.html.erb
+++ b/direwolf/app/views/seekers/show.html.erb
@@ -41,5 +41,5 @@
         </form>
     </div>
   </div>
-  <%= link_to 'Back', root_path, class: "btn btn-primary pull-left" %>
+  <%= link_to 'Back', root_path, class: "btn btn-primary" %>
 </div>
