Adding deadline to jobs >> THere is some issue with javascript and css so it looks terrible JobApplications are now deleted if job is deleted

--- a/direwolf/app/assets/stylesheets/application.css
+++ b/direwolf/app/assets/stylesheets/application.css
@@ -11,4 +11,6 @@
  *= require_self
  *= require vendor_css
  *= require styles
+ *= require bootstrap/bootstrap
+ *= require bootstrap-datetimepicker
  */
