--- a/direwolf/app/views/jobs/show.html.erb
+++ b/direwolf/app/views/jobs/show.html.erb
@@ -46,6 +46,13 @@
           </div>
 
           <div class="form-group">
+            <label class="col-sm-3 control-label">Deadline:</label>
+            <div class="col-sm-9">
+              <p class="form-control-static"><%= @job.expires_at.to_s %></p>
+            </div>
+          </div>
+
+          <div class="form-group">
             <label class="col-sm-3 control-label">Job Description:</label>
             <div class="col-sm-9">
               <p class="form-control-static"><%= @job.description %></p>
@@ -62,8 +69,12 @@
           <%= link_to "Delete", job_path(:id => @job.id), :method=> :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
         </div>
       <%end%>
-      <%if user_is :seeker %>
-        <%= link_to "Apply", new_job_application_path(:job_id=>@job.id), class: "btn btn-success btn-block" %>
+      <%if user_is :seeker%>
+        <%if @job.expired? %>
+          <div class="panel-footer">Deadline has expired</div>
+        <%else%>
+          <%= link_to "Apply", new_job_application_path(:job_id=>@job.id), class: "btn btn-success btn-block" %>
+        <%end%>
       <%end%>
       <%if get_user_type.nil? %>
         <%= link_to "Log In To Apply!", "/auth/google_oauth2", id: "sign_in", class: "btn btn-success btn-block" %>
