--- a/direwolf/app/views/jobs/_form.html.erb
+++ b/direwolf/app/views/jobs/_form.html.erb
@@ -44,23 +44,21 @@
           <span class="help-block">Comma Separated List of Tags</span>
         </div>
       </div>
-      <div class="container">
-        <div class="row">
-          <div class='col-sm-6'>
-            <div class="form-group">
-              <div class='input-group date' id='datetimepicker1'>
-                <%= f.text_field :expires_at,  class: "form-control" %>
-                <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
-                </span>
-              </div>
-            </div>
+
+      <div class="form-group">
+        <%= f.label :expires_at, "Deadline:", class: "col-md-4 control-label" %>
+        <div class="col-md-4">
+          <div class='input-group date' id='datetimepicker1'>
+            <%= f.text_field :expires_at,  class: "form-control" %>
+            <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
+            </span>
           </div>
+        </div>
           <script type="text/javascript">
             $(function () {
              $('#datetimepicker1').datetimepicker();
             });
           </script>
-        </div>
       </div>
 
       <!-- Textarea -->
