--- a/direwolf/app/views/welcome/index.html.erb
+++ b/direwolf/app/views/welcome/index.html.erb
@@ -1,5 +1,10 @@
 <!-- Main component for a primary marketing message or call to action -->
 <div class="jumbotron">
-    <h1>DireWolf Job Portal</h1>
-    <p>Motivational talk about the DireWolf Job Portal.</p>
+  <h1>DireWolf Job Portal</h1>
+  <p>Looking for that dream job? </p>
+  <p>Well let us help you look for it.</p>
+  <%="A Plethora of Jobs are waiting for you"%> <%=link_to "Search Now!", jobs_path, class: "btn btn-success" %>
 </div>
+<div id="wrap" class="container">
+  <div class="alert alert-info"><%="Attention: Reviewers looking for login info and default accounts visit  " %><%=link_to "GitHub Page", "https://github.ncsu.edu/djzager/DireWolf-Job-Portal-sportsball1#online-deploymentuser-view", class: "btn btn-primary", :target => "_blank"%></div>
+</div> <!-- /container -->
